Lab1/yaplParser.py
# Generated from yapl.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'<-'", "'@'", "'.'", "'+'", "'-'", "'*'", "'/'", 
                     "'~'", "'<'", "'<='", "'='", "<INVALID>", "<INVALID>", 
                     "'false'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'true'", "'let'", 
                     "<INVALID>", "<INVALID>", "'self'", "'SELF_TYPE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CLASS", "ELSE", 
                      "FALSE", "FI", "IF", "IN", "INHERITS", "ISVOID", "LOOP", 
                      "POOL", "THEN", "WHILE", "NEW", "NOT", "TRUE", "LET", 
                      "TYPE_ID", "OBJECT_ID", "SELF", "SELF_TYPE", "STRING", 
                      "WHITESPACE", "NEWLINE", "INT", "COMMENT", "COMMENT_BLOCK" ]

    RULE_prog = 0
    RULE_class_def = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "prog", "class_def", "feature", "formal", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    CLASS=19
    ELSE=20
    FALSE=21
    FI=22
    IF=23
    IN=24
    INHERITS=25
    ISVOID=26
    LOOP=27
    POOL=28
    THEN=29
    WHILE=30
    NEW=31
    NOT=32
    TRUE=33
    LET=34
    TYPE_ID=35
    OBJECT_ID=36
    SELF=37
    SELF_TYPE=38
    STRING=39
    WHITESPACE=40
    NEWLINE=41
    INT=42
    COMMENT=43
    COMMENT_BLOCK=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.Class_defContext)
            else:
                return self.getTypedRuleContext(yaplParser.Class_defContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = yaplParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.class_def()
                self.state = 11
                self.match(yaplParser.T__0)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==yaplParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FeatureContext)
            else:
                return self.getTypedRuleContext(yaplParser.FeatureContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)




    def class_def(self):

        localctx = yaplParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self.match(yaplParser.CLASS)
            self.state = 18
            self.match(yaplParser.TYPE_ID)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yaplParser.INHERITS:
                self.state = 19
                self.match(yaplParser.INHERITS)
                self.state = 20
                self.match(yaplParser.TYPE_ID)


            self.state = 23
            self.match(yaplParser.T__1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID:
                self.state = 24
                self.feature()
                self.state = 25
                self.match(yaplParser.T__0)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(yaplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(yaplParser.FormalContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)




    def feature(self):

        localctx = yaplParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yaplParser.T__3:
                    self.state = 35
                    self.match(yaplParser.T__3)
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID:
                        self.state = 36
                        self.formal()
                        self.state = 41
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==yaplParser.T__4:
                            self.state = 37
                            self.match(yaplParser.T__4)
                            self.state = 38
                            self.formal()
                            self.state = 43
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)



                    self.state = 46
                    self.match(yaplParser.T__5)


                self.state = 49
                self.match(yaplParser.T__6)
                self.state = 50
                self.match(yaplParser.TYPE_ID)
                self.state = 51
                self.match(yaplParser.T__1)
                self.state = 52
                self.expr(0)
                self.state = 53
                self.match(yaplParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.match(yaplParser.T__6)
                self.state = 57
                self.match(yaplParser.TYPE_ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yaplParser.T__7:
                    self.state = 58
                    self.match(yaplParser.T__7)
                    self.state = 59
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = yaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 65
            self.match(yaplParser.T__6)
            self.state = 66
            self.match(yaplParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)


        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def OBJECT_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.OBJECT_ID)
            else:
                return self.getToken(yaplParser.OBJECT_ID, i)

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def THEN(self):
            return self.getToken(yaplParser.THEN, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(yaplParser.LOOP, 0)

        def POOL(self):
            return self.getToken(yaplParser.POOL, 0)

        def LET(self):
            return self.getToken(yaplParser.LET, 0)

        def IN(self):
            return self.getToken(yaplParser.IN, 0)

        def NEW(self):
            return self.getToken(yaplParser.NEW, 0)

        def ISVOID(self):
            return self.getToken(yaplParser.ISVOID, 0)

        def NOT(self):
            return self.getToken(yaplParser.NOT, 0)

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def STRING(self):
            return self.getToken(yaplParser.STRING, 0)

        def TRUE(self):
            return self.getToken(yaplParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(yaplParser.FALSE, 0)

        def SELF(self):
            return self.getToken(yaplParser.SELF, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = yaplParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 69
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 70
                self.match(yaplParser.T__7)
                self.state = 71
                self.expr(23)
                pass

            elif la_ == 2:
                self.state = 72
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 73
                self.match(yaplParser.T__3)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__1) | (1 << yaplParser.T__3) | (1 << yaplParser.T__11) | (1 << yaplParser.T__14) | (1 << yaplParser.FALSE) | (1 << yaplParser.IF) | (1 << yaplParser.ISVOID) | (1 << yaplParser.WHILE) | (1 << yaplParser.NEW) | (1 << yaplParser.NOT) | (1 << yaplParser.TRUE) | (1 << yaplParser.LET) | (1 << yaplParser.TYPE_ID) | (1 << yaplParser.OBJECT_ID) | (1 << yaplParser.SELF) | (1 << yaplParser.STRING) | (1 << yaplParser.INT))) != 0):
                    self.state = 74
                    self.expr(0)
                    self.state = 79
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==yaplParser.T__4:
                        self.state = 75
                        self.match(yaplParser.T__4)
                        self.state = 76
                        self.expr(0)
                        self.state = 81
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 84
                self.match(yaplParser.T__5)
                pass

            elif la_ == 3:
                self.state = 85
                self.match(yaplParser.IF)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(yaplParser.THEN)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(yaplParser.ELSE)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(yaplParser.FI)
                pass

            elif la_ == 4:
                self.state = 93
                self.match(yaplParser.WHILE)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(yaplParser.LOOP)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(yaplParser.POOL)
                pass

            elif la_ == 5:
                self.state = 99
                self.match(yaplParser.T__1)
                self.state = 103 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 100
                    self.expr(0)
                    self.state = 101
                    self.match(yaplParser.T__0)
                    self.state = 105 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__1) | (1 << yaplParser.T__3) | (1 << yaplParser.T__11) | (1 << yaplParser.T__14) | (1 << yaplParser.FALSE) | (1 << yaplParser.IF) | (1 << yaplParser.ISVOID) | (1 << yaplParser.WHILE) | (1 << yaplParser.NEW) | (1 << yaplParser.NOT) | (1 << yaplParser.TRUE) | (1 << yaplParser.LET) | (1 << yaplParser.TYPE_ID) | (1 << yaplParser.OBJECT_ID) | (1 << yaplParser.SELF) | (1 << yaplParser.STRING) | (1 << yaplParser.INT))) != 0)):
                        break

                self.state = 107
                self.match(yaplParser.T__2)
                pass

            elif la_ == 6:
                self.state = 109
                self.match(yaplParser.LET)
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 111
                self.match(yaplParser.T__6)
                self.state = 112
                self.match(yaplParser.TYPE_ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yaplParser.T__7:
                    self.state = 113
                    self.match(yaplParser.T__7)
                    self.state = 114
                    self.expr(0)


                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==yaplParser.T__4:
                    self.state = 117
                    self.match(yaplParser.T__4)
                    self.state = 118
                    _la = self._input.LA(1)
                    if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 119
                    self.match(yaplParser.T__6)
                    self.state = 120
                    self.match(yaplParser.TYPE_ID)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==yaplParser.T__7:
                        self.state = 121
                        self.match(yaplParser.T__7)
                        self.state = 122
                        self.expr(0)


                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 130
                self.match(yaplParser.IN)
                self.state = 131
                self.expr(17)
                pass

            elif la_ == 7:
                self.state = 132
                self.match(yaplParser.NEW)
                self.state = 133
                self.match(yaplParser.TYPE_ID)
                pass

            elif la_ == 8:
                self.state = 134
                self.match(yaplParser.ISVOID)
                self.state = 135
                self.expr(15)
                pass

            elif la_ == 9:
                self.state = 136
                self.match(yaplParser.T__11)
                self.state = 137
                self.expr(12)
                pass

            elif la_ == 10:
                self.state = 138
                self.match(yaplParser.T__14)
                self.state = 139
                self.expr(11)
                pass

            elif la_ == 11:
                self.state = 140
                self.match(yaplParser.NOT)
                self.state = 141
                self.expr(8)
                pass

            elif la_ == 12:
                self.state = 142
                self.match(yaplParser.T__3)
                self.state = 143
                self.expr(0)
                self.state = 144
                self.match(yaplParser.T__5)
                pass

            elif la_ == 13:
                self.state = 146
                _la = self._input.LA(1)
                if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 14:
                self.state = 147
                self.match(yaplParser.INT)
                pass

            elif la_ == 15:
                self.state = 148
                self.match(yaplParser.STRING)
                pass

            elif la_ == 16:
                self.state = 149
                self.match(yaplParser.TRUE)
                pass

            elif la_ == 17:
                self.state = 150
                self.match(yaplParser.FALSE)
                pass

            elif la_ == 18:
                self.state = 151
                self.match(yaplParser.SELF)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 187
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 185
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 154
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 155
                        _la = self._input.LA(1)
                        if not(_la==yaplParser.T__10 or _la==yaplParser.T__11):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 156
                        self.expr(15)
                        pass

                    elif la_ == 2:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 157
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 158
                        _la = self._input.LA(1)
                        if not(_la==yaplParser.T__12 or _la==yaplParser.T__13):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 159
                        self.expr(14)
                        pass

                    elif la_ == 3:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 160
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 161
                        _la = self._input.LA(1)
                        if not(_la==yaplParser.T__15 or _la==yaplParser.T__16):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 162
                        self.expr(11)
                        pass

                    elif la_ == 4:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 163
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 164
                        self.match(yaplParser.T__17)
                        self.state = 165
                        self.expr(10)
                        pass

                    elif la_ == 5:
                        localctx = yaplParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 166
                        if not self.precpred(self._ctx, 22):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 22)")
                        self.state = 169
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==yaplParser.T__8:
                            self.state = 167
                            self.match(yaplParser.T__8)
                            self.state = 168
                            self.match(yaplParser.TYPE_ID)


                        self.state = 171
                        self.match(yaplParser.T__9)
                        self.state = 172
                        _la = self._input.LA(1)
                        if not(_la==yaplParser.TYPE_ID or _la==yaplParser.OBJECT_ID):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 173
                        self.match(yaplParser.T__3)
                        self.state = 182
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << yaplParser.T__1) | (1 << yaplParser.T__3) | (1 << yaplParser.T__11) | (1 << yaplParser.T__14) | (1 << yaplParser.FALSE) | (1 << yaplParser.IF) | (1 << yaplParser.ISVOID) | (1 << yaplParser.WHILE) | (1 << yaplParser.NEW) | (1 << yaplParser.NOT) | (1 << yaplParser.TRUE) | (1 << yaplParser.LET) | (1 << yaplParser.TYPE_ID) | (1 << yaplParser.OBJECT_ID) | (1 << yaplParser.SELF) | (1 << yaplParser.STRING) | (1 << yaplParser.INT))) != 0):
                            self.state = 174
                            self.expr(0)
                            self.state = 179
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            while _la==yaplParser.T__4:
                                self.state = 175
                                self.match(yaplParser.T__4)
                                self.state = 176
                                self.expr(0)
                                self.state = 181
                                self._errHandler.sync(self)
                                _la = self._input.LA(1)



                        self.state = 184
                        self.match(yaplParser.T__5)
                        pass

             
                self.state = 189
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[4] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 22)
         




